--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,5 +36,6 @@ dependencies {
     compile 'com.android.support:support-v4:24.1.0'
     compile 'com.android.support:cardview-v7:24.1.0'
     compile 'com.android.support:recyclerview-v7:24.1.0'
+    compile 'com.github.jetradarMobile:DesertPlaceholder:1.0.1'
     testCompile 'junit:junit:4.12'
 }
