Form Activity build 1

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,8 @@
             android:label="@string/title_activity_main_page"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".Activities.FormActivity"
-            android:label="Enter your details">
+            android:label="Enter your details"
+            android:theme="@style/AppTheme">
         </activity>
     </application>
 
