--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@
 android {
     compileSdkVersion 25
     buildToolsVersion "24.0.1"
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "international.rst.com.rstsimplified"
         minSdkVersion 15
@@ -37,5 +38,6 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.0'
     compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'me.relex:circleindicator:1.2.2@aar'
+    compile group: 'org.apache.httpcomponents' , name: 'httpclient-android' , version: '4.3.5.1'
     testCompile 'junit:junit:4.12'
 }
