--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,15 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.ServicesActivity"
-            android:label="@string/app_name"
-            android:parentActivityName=".Activities.MainPage"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".Activities.MainPage" />
-        </activity>
-        <activity
             android:name=".Activities.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_splash"
@@ -39,10 +30,14 @@
             android:name=".Activities.MainPage"
             android:label="@string/title_activity_main_page"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".Activities.FormActivity"
+        <activity
+            android:name=".Activities.FormActivity"
             android:label="Submit your details"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".Activities.ActivityServices"
+            android:label="@string/title_activity_services"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
