--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,6 +41,10 @@
         <activity
             android:name=".Activities.VisaServicesOptions"
             android:label="@string/title_activity_visa_services_options"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activities.PaymentGateway"
+            android:label="@string/title_activity_payment_gateway"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
