--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Activities.MainPage"
+            android:label="@string/title_activity_main_page"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
             android:name=".Activities.FormActivity"
             android:label="Submit your details"
             android:theme="@style/AppTheme">
